@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_css">
-
-  <stylesheet id="++theme++plonetheme.teamraum/css/bumblebee.css"
-              title="" authenticated="False" cacheable="True"
-              compression="safe" conditionalcomment="" cookable="True" enabled="True"
-              expression="request/HTTP_X_THEME_ENABLED | nothing"
-              media="" rel="stylesheet"
-              rendering="link"
-              applyPrefix="True"
-              />
-
-</object>
