@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<!-- This profile is deprecated and should not be added to - only here for compatibility purposes! -->
 <metadata>
     <version>1000</version>
 </metadata>
